[gd_scene load_steps=14 format=2]

[ext_resource path="res://movingObject.tscn" type="PackedScene" id=1]
[ext_resource path="res://ground1.png" type="Texture" id=2]
[ext_resource path="res://Area2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://coins.tscn" type="PackedScene" id=5]
[ext_resource path="res://tile.gd" type="Script" id=6]
[ext_resource path="res://exit.tscn" type="PackedScene" id=7]
[ext_resource path="res://realexit.tscn" type="PackedScene" id=8]
[ext_resource path="res://audio.tscn" type="PackedScene" id=9]
[ext_resource path="res://untitled.ogg" type="AudioStream" id=10]
[ext_resource path="res://water_shader.tscn" type="PackedScene" id=11]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="TileSet" id=2]
0/name = "ground1.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Node2D" type="Node2D"]
position = Vector2( 0, -1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_vertical_guides_": [ -2600.0 ]
}

[node name="background" type="Sprite" parent="."]
self_modulate = Color( 0.313726, 0.00784314, 0.0235294, 1 )
position = Vector2( -856, -568 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 4000, 2000 )

[node name="Area2D" parent="." instance=ExtResource( 8 )]
position = Vector2( 2264, 160 )
z_as_relative = false

[node name="exit" parent="." instance=ExtResource( 7 )]
position = Vector2( 2016, 144 )

[node name="movingObject" parent="." instance=ExtResource( 1 )]
position = Vector2( 244.941, 36.4548 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131087, 0, 0, 131089, 0, 0, 131090, 0, 0, 262143, 0, 0, 196612, 0, 0, 196622, 0, 0, 196623, 0, 0, 327679, 0, 0, 262147, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0 )

[node name="moving_platform" parent="." instance=ExtResource( 3 )]

[node name="coins" type="Node2D" parent="."]

[node name="coins" parent="coins" instance=ExtResource( 5 )]
position = Vector2( -32, -24 )

[node name="coins2" parent="coins" instance=ExtResource( 5 )]
position = Vector2( 936, 168 )

[node name="coins3" parent="coins" instance=ExtResource( 5 )]
position = Vector2( 1352, 464 )

[node name="coins4" parent="coins" instance=ExtResource( 5 )]
position = Vector2( 1784, 360 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 448.0
margin_top = 16.0
margin_right = 576.0
margin_bottom = 47.0
text = "collect only three coins
coins"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer"]
margin_left = 456.0
margin_top = 56.0
margin_right = 584.0
margin_bottom = 87.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer"]
margin_left = 456.0
margin_top = 218.732
margin_right = 584.0
margin_bottom = 249.732
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" parent="." instance=ExtResource( 9 )]
stream = ExtResource( 10 )

[node name="Node2D" parent="." instance=ExtResource( 11 )]
position = Vector2( 896.058, 582.4 )
scale = Vector2( 12.0037, 1.79767 )
[connection signal="won" from="exit" to="." method="_on_exit_won"]
[connection signal="score_counter" from="coins/coins" to="." method="_on_coins_score_counter"]
[connection signal="score_counter" from="coins/coins2" to="." method="_on_coins_score_counter"]
[connection signal="score_counter" from="coins/coins3" to="." method="_on_coins_score_counter"]
[connection signal="score_counter" from="coins/coins4" to="." method="_on_coins_score_counter"]
